<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">
    <!--tools:context=".MainActivity"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            app:icon="@android:drawable/ic_menu_revert"
            app:iconTint="#505050" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/petImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:background="#E4E4E4"
        android:clickable="false"
        android:contentDescription="@string/petImage"
        app:srcCompat="@drawable/pet_1_1"
        tools:srcCompat="@drawable/pet_1_1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/petName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/petName_1_1"
        android:textSize="34sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:max="30"
        android:progress="10" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/petNextLvlExp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/petInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/petInfo_1_1"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/petSelectPartner" />
</LinearLayout>